--- a/src/components/Toggle/Toggle.css
+++ b/src/components/Toggle/Toggle.css
@@ -9,7 +9,7 @@
     padding: 2px;
     border-radius: 1.5rem;
     border: 5px inset gray;
-    background-color: rgb(46, 52, 55);
+    background-color: rgb(65, 75, 80);
   }
   label::before {
     content: '';
@@ -27,9 +27,10 @@
   }
   input:checked + label {
     background-color:  rgb(211, 217, 225);
-
+    border: 5px inset gold;
     &::before {
       margin-left: 1.5rem;
+      background-color: gold;
     }
   }
 }
